Copying and printing fixes
Fixed endless recursion when copying.
Fixed null labels when printing expressions.